working in admin view

--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,3 +1,7 @@
+.max-width-50 {
+  max-width: 50%;
+}
+
 .min-width-50 {
   min-width: 50%;
 }
@@ -8,6 +12,12 @@
 
 .min-width-35 {
   width: 35%;
+}
+.width-50 {
+  width: 50%;
+}
+.widht-90 {
+  width: 90%;
 }
 
 .min-height-500 {
