--- a/src/styles/flex.scss
+++ b/src/styles/flex.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.flex-col {
+	flex-direction: column;
+}
+
 .flex-nowrap {
 	flex-wrap: nowrap;
 }
@@ -17,7 +21,6 @@
 .align-center {
   align-items: center;
 }
-
 // Grow
 @mixin flex-grow($value) {
 	flex-grow: $value;
