--- a/src/styles/sizes.scss
+++ b/src/styles/sizes.scss
@@ -1,6 +1,9 @@
 .max-width-50 {
   max-width: 50%;
 }
+.max-width-700 {
+  max-width: 40%;
+}
 
 .min-width-50 {
   min-width: 50%;
@@ -20,6 +23,9 @@
   width: 90%;
 }
 
+.max-width-600 {
+  max-width: 600px
+}
 .min-height-500 {
   min-height: 500px;
 }
