--- a/src/styles/font.scss
+++ b/src/styles/font.scss
@@ -39,6 +39,10 @@ $color-names: "light", "primary", "success", "error", "white", "gray", "primary-
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-pointer {
 	cursor: pointer;
 }
