--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -1,6 +1,9 @@
 .m-10 {
   margin: 10px;
 }
+.mt-30 {
+  margin-top: 30px;
+}
 
 .my-10 {
   margin-top: 10px;
@@ -10,6 +13,11 @@
 .my-20 {
   margin-top: 20px;
   margin-bottom: 20px;
+} 
+
+.my-30 {
+  margin-top: 30px;
+  margin-bottom: 30px;
 } 
 
 .mx-10 {
