Add dropzone upload image

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,7 @@
 @import '@/styles/button.scss';
 @import '@/styles/sizes.scss';
 @import '@/styles/position.scss';
+@import '@/styles/backgrounds.scss';
 
 html, body {
   height: max-content;
