--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@
 @import '@/styles/sizes.scss';
 @import '@/styles/position.scss';
 @import '@/styles/backgrounds.scss';
+@import '@/styles/utils.scss';
 
 html, body {
   height: max-content;
