--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -18,7 +18,12 @@
 .my-30 {
   margin-top: 30px;
   margin-bottom: 30px;
-} 
+}
+
+.margin-y-none {
+  margin-top: 0px !important;
+	margin-bottom: 0px !important; 	
+}
 
 .mx-10 {
   margin-left: 10px;	
@@ -65,7 +70,6 @@
 }
 
 // PY
-
 .py-20 {
 	padding-top: 20px;
 	padding-bottom: 20px;	
