Add modal error component

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,6 +8,7 @@
 @import '@/styles/position.scss';
 @import '@/styles/backgrounds.scss';
 @import '@/styles/utils.scss';
+@import '@/styles/components/modal.scss';
 
 html, body {
   height: max-content;
