--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -5,6 +5,11 @@
   margin-top: 30px;
 }
 
+.my-5 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
 .my-10 {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -58,6 +63,11 @@
 	padding-right: 5px;
 }
 
+.pr-10 {
+	padding-right: 10px;
+}
+
+
 .pr-20 {
 	padding-right: 20px;
 }
@@ -65,6 +75,11 @@
 .px-5 {
 	padding-right: 5px;
 	padding-left: 5px;	
+}
+
+.px-10 {
+	padding-right: 10px;
+	padding-left: 10px;	
 }
 
 .px-20 {
