--- a/src/styles/spacing.scss
+++ b/src/styles/spacing.scss
@@ -88,13 +88,25 @@
 }
 
 // PY
+.py-5 {
+	padding-top: 5px;
+	padding-bottom: 5px;	
+}
 .py-20 {
 	padding-top: 20px;
 	padding-bottom: 20px;	
 }
 
+
+.pb-5 {
+  padding-bottom: 5px;
+}
 .pb-10 {
   padding-bottom: 10px;
+}
+
+.pt-20 {
+  padding-top: 20px;
 }
 
 .pl-5 {
